header best place to learn

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
                 <li><a href="contact">Contact</a></li>
             </ul>
         </nav>
+        <header>
+            <div>
+                <h1>Best Place to Learn Frontend</h1>
+            </div>
+        </header>
     </section>
 </body>
 </html>
