laptop image addtion

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <section>
         <nav>
@@ -19,7 +21,12 @@
         <header>
             <div>
                 <h1>Best Place to Learn Frontend</h1>
+                <p>Go from being an absolute beginer to being a pro with a simplified process</p>
+                <button>Start Now</button>
             </div>
+            <figure>
+                <img src="./Assetes/Assests/laptop.png" alt="Home page image">
+            </figure>
         </header>
     </section>
 </body>
