adding in 3 differnt sections and the footer

--- a/index.html
+++ b/index.html
@@ -1,33 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-    
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <section>
-        <nav>
-            <img src="./Assetes/FES.svg" alt="">
-            <ul>
-                <li><a href="about">About</a></li>
-                <li><a href="discord">Discord</a></li>
-                <li><a href="contact">Contact</a></li>
-            </ul>
-        </nav>
-        <header>
-            <div>
-                <h1>Best Place to Learn Frontend</h1>
-                <p>Go from being an absolute beginer to being a pro with a simplified process</p>
-                <button>Start Now</button>
-            </div>
-            <figure>
-                <img src="./Assetes/Assests/laptop.png" alt="Home page image">
-            </figure>
-        </header>
+      <nav>
+        <img src="./Assetes/Assests/FES.svg" alt="" />
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#discord">Discord</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+      <header>
+        <div>
+          <h1>Best Place to Learn Frontend</h1>
+          <p>
+            Go from being an absolute beginer to being a pro with a simplified
+            process
+          </p>
+          <button>Start Now</button>
+        </div>
+        <figure>
+          <img src="./Assetes/Assests/laptop.png" alt="Home page image" />
+        </figure>
+      </header>
     </section>
-</body>
+
+    <main>
+      <section id="about">
+        <h2>About</h2>
+        <div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+            ratione illo veritatis officiis, totam dolores tempore, consequuntur
+            quaerat eius beatae molestiae libero tempora consectetur. Numquam
+            quisquam quo sint laboriosam expedita.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+            ratione illo veritatis officiis, totam dolores tempore, consequuntur
+            quaerat eius beatae molestiae libero tempora consectetur. Numquam
+            quisquam quo sint laboriosam expedita.
+          </p>
+        </div>
+        <figure>
+          <img src="./Assetes/Assests/about.jpg" alt="" />
+        </figure>
+      </section>
+
+      <section id="discord">
+        <h2>Discord</h2>
+        <figure>
+          <img src="./Assetes/Assests/discord.png" alt="Discord" />
+        </figure>
+        <div>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum
+            dolore at minus provident, vitae temporibus accusantium ipsam
+            facilis iste dolorum sapiente ad ea voluptas assumenda deleniti
+            voluptates, ullam unde. Alias!
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione unde itaque quo enim quidem ea, voluptatibus, consectetur dignissimos optio dolor deserunt dolore deleniti! Magni provident assumenda exercitationem sint labore expedita amet illo nesciunt. Sit quos molestiae dignissimos possimus veniam consectetur? Porro ducimus, quasi odit aliquam tenetur magnam possimus mollitia labore nemo minus. Neque delectus alias repudiandae, sit, ratione repellendus autem at atque ullam doloremque mollitia consectetur temporibus non facere placeat commodi hic aliquam aperiam! Soluta id blanditiis sint voluptates officia. ipsum dolor sit, amet consectetur adipisicing elit.
+            Repellendus provident adipisci nemo, recusandae culpa voluptatum
+            voluptas voluptate alias sint eaque quam odio officia autem quasi
+            quod voluptatem nesciunt distinctio pariatur.
+          </p>
+        </div>
+      </section>
+
+      <section id="contact">
+        <h2>Contact</h2>
+        <form action="">
+            <span>Email</span>
+            <input type="text" placeholder="jane@example.com">
+            <span>Message</span>
+            <textarea type="text" placeholder="jane@example.com"></textarea>
+            <button>Submit</button>
+
+        </form>
+      </section>
+    </main>
+
+    <footer>
+        <img src="./Assetes/" alt="">
+        <div>
+            <a href="#about">About</a>
+            <a href="#discord">Discord</a>
+            <a href="#contact">Contact</a>
+            <a href="">Cources</a>
+        </div>
+        <p>Copyright Fontend Simplified</p>
+        </footer>
+  </body>
 </html>
